feat(ue): eliminate all Coming Soon placeholders, wire mock data to real APIs
- Remove all 18 'Coming Soon' labels across 15 files (zero remaining)
- Build full portal notifications page wired to /api/v2/notifications
- Build full portal settings page wired to /api/v2/notifications/preferences
- Wire 19 mock-data components to real v2 API endpoints:
  - Governance: BylawsViewer, PolicyManager, SignatoryManager
  - Executive: ExecutiveDashboard, StrategicPlanningBoard
  - CLC: CLCRemittanceDashboard, CLCSyncDashboard
  - Financial: APAgingReport
  - Social media: 5 components (campaigns, posts, analytics, dashboard, feed)
  - Communications: push-notification-history, push-device-manager
  - Analytics: 4 dashboards (communication, benchmark, engagement, scheduled-reports)
- Wire 18 mock-data pages to real v2 API endpoints:
  - 4 health-safety pages (stats + form submits)
  - organizing, grievances, agreements, audits, stewards
  - cases/edit, ab-testing, pension/admin
  - federation/remittances, clc/compliance, admin/users
- Fix drizzle-orm version mismatch in health/route.ts (db ^0.39 vs app ^0.45)
- Fix TypeScript errors in cases/edit, pension/admin, admin/users

--- a/apps/union-eyes/.env.example
+++ b/apps/union-eyes/.env.example
@@ -31,6 +31,23 @@ AZURE_OPENAI_DEPLOYMENT=gpt-4
 BACKBONE_API_URL=http://localhost:8000
 BACKBONE_API_KEY=
 
+# Cron secret — used by scheduled jobs (rewards, billing, reminders)
+# Generate with: openssl rand -hex 32
+CRON_SECRET=
+
+# Whop (membership checkout integration)
+WHOP_API_KEY=
+WHOP_PLAN_ID_MONTHLY=
+WHOP_PLAN_ID_YEARLY=
+
+# PayPal (payment webhook verification)
+PAYPAL_CLIENT_ID=
+PAYPAL_CLIENT_SECRET=
+PAYPAL_WEBHOOK_ID=
+
+# App URL (used for social sharing, AI client, webhooks)
+NEXT_PUBLIC_APP_URL=http://localhost:3000
+
 # Evidence sealing — AES-256 key used to create HMAC seal envelopes.
 # Generate with: python -c "import secrets; print(secrets.token_hex(32))"
 # REQUIRED in production. Rotation invalidates all existing seals.
