--- a/package.json
+++ b/package.json
@@ -46,7 +46,8 @@
       "minimatch": ">=10.2.2",
       "cjs-module-lexer": ">=2.2.0",
       "jspdf": ">=4.2.0",
-      "@firebase/util": ">=1.10.3"
+      "@firebase/util": ">=1.10.3",
+      "eslint": "^9.39.0"
     }
   }
 }
