--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "test:all": "vitest run",
     "test:coverage": "turbo test:coverage",
     "contract-tests": "vitest run --project contract-tests",
+    "contract:test": "vitest run --project contract-tests",
     "release": "changeset publish",
     "version-packages": "changeset version",
     "clean": "turbo clean",
