--- a/apps/union-eyes/package.json
+++ b/apps/union-eyes/package.json
@@ -29,6 +29,7 @@
     "@azure/keyvault-secrets": "^4.7.0",
     "@azure/ms-rest-js": "^2.7.0",
     "@azure/msal-node": "^3.8.4",
+    "@azure/storage-blob": "^12.26.0",
     "@clerk/backend": "^1.9.0",
     "@clerk/nextjs": "^6.12.0",
     "@clerk/themes": "^2.4.43",
@@ -107,6 +108,7 @@
     "dompurify": "^3.3.1",
     "dotenv": "^16.4.5",
     "driver.js": "^1.4.0",
+    "axios": "^1.9.0",
     "drizzle-orm": "^0.45.1",
     "drizzle-zod": "^0.8.3",
     "embla-carousel-react": "^8.2.0",
@@ -131,6 +133,7 @@
     "node-geocoder": "^4.4.1",
     "papaparse": "^5.5.3",
     "pdf-parse": "^2.4.5",
+    "pdfjs-dist": "^4.10.38",
     "pdfkit": "^0.15.0",
     "pg": "^8.18.0",
     "postgres": "^3.4.4",
