--- a/apps/union-eyes/package.json
+++ b/apps/union-eyes/package.json
@@ -162,6 +162,7 @@
     "tailwindcss-animate": "^1.0.7",
     "tesseract.js": "^7.0.0",
     "twilio": "^5.10.7",
+    "uuid": "^9.0.1",
     "vaul": "^0.9.1",
     "zod": "^3.23.8"
   },
