fix(union-eyes): add decimal.js dependency for pension processor types

--- a/apps/union-eyes/package.json
+++ b/apps/union-eyes/package.json
@@ -44,6 +44,7 @@
     "@nzila/db": "workspace:*",
     "@nzila/ml-sdk": "workspace:*",
     "@nzila/os-core": "workspace:*",
+    "@nzila/payments-stripe": "workspace:*",
     "@paralleldrive/cuid2": "^3.3.0",
     "@radix-ui/react-accordion": "^1.2.0",
     "@radix-ui/react-alert-dialog": "^1.1.1",
@@ -98,6 +99,7 @@
     "@types/twilio": "^3.19.3",
     "@upstash/redis": "^1.35.8",
     "@whop-apps/sdk": "^0.0.1-canary.109",
+    "axios": "^1.9.0",
     "bullmq": "^5.66.0",
     "canvas-confetti": "^1.9.3",
     "chart.js": "^4.5.1",
@@ -105,10 +107,10 @@
     "clsx": "^2.1.1",
     "cmdk": "^1.0.0",
     "date-fns": "^4.1.0",
+    "decimal.js": "^10.6.0",
     "dompurify": "^3.3.1",
     "dotenv": "^16.4.5",
     "driver.js": "^1.4.0",
-    "axios": "^1.9.0",
     "drizzle-orm": "^0.45.1",
     "drizzle-zod": "^0.8.3",
     "embla-carousel-react": "^8.2.0",
@@ -155,7 +157,6 @@
     "sonner": "^1.5.0",
     "square": "^43.0.0",
     "stripe": "^16.9.0",
-    "@nzila/payments-stripe": "workspace:*",
     "swagger-ui-react": "^5.31.0",
     "swr": "^2.3.7",
     "tailwind-merge": "^2.5.2",
