feat(platform): platform-wow packages + console pages
Packages:
- @nzila/platform-isolation (runIsolationAudit, computeIsolationScore)
- @nzila/platform-performance (getPerformanceEnvelope, computeEnvelope)
- @nzila/platform-proof (generateGovernanceProofPack, computeSignatureHash)

DB schema:
- platform.ts: platformRequestMetrics, platformIsolationAudits, platformProofPacks
- org-registry: new tables registered in ORG_SCOPED / NON_ORG_SCOPED

Console pages (7):
- audit-graph, deployment-profile, isolation-certification
- performance, platform-economics, proof-pack, scale-simulation

All packages: typecheck clean, lint clean, 25/25 tests pass

--- a/apps/console/tsconfig.json
+++ b/apps/console/tsconfig.json
@@ -7,7 +7,11 @@
       "@nzila/db": ["../../packages/db/src/index.ts"],
       "@nzila/db/schema": ["../../packages/db/src/schema/index.ts"],
       "@nzila/db/client": ["../../packages/db/src/client.ts"],
-      "@nzila/commerce-observability": ["../../packages/commerce-observability/src"]
+      "@nzila/commerce-observability": ["../../packages/commerce-observability/src"],
+      "@nzila/platform-performance": ["../../packages/platform-performance/src/index.ts"],
+      "@nzila/platform-isolation": ["../../packages/platform-isolation/src/index.ts"],
+      "@nzila/platform-proof": ["../../packages/platform-proof/src/index.ts"],
+      "@nzila/db/org-registry": ["../../packages/db/src/org-registry.ts"]
     }
   },
   "include": [
