--- a/packages/platform-proof/package.json
+++ b/packages/platform-proof/package.json
@@ -5,7 +5,8 @@
   "main": "./src/index.ts",
   "types": "./src/index.ts",
   "exports": {
-    ".": "./src/index.ts"
+    ".": "./src/index.ts",
+    "./integrations": "./src/integrations-proof.ts"
   },
   "scripts": {
     "typecheck": "tsc --noEmit",
