fix(infra): ESM module resolution, os-core dynamic imports, evidence types
- Add type:module to all 44+ workspace packages for ESM compat
- Fix os-core/authorize.ts: change static next/server import to import type + dynamic getNextServer() helper
- Fix os-core/boot-assert.ts: replace require.resolve() with import.meta.resolve()
- Create packages/evidence/index.d.ts with full TypeScript declarations
- Update evidence package.json with types field and conditional exports
- Remove ajv ~6.14.0 override from root package.json (conflicted with Fastify ajv@^8)
- Update pnpm-lock.yaml after dependency resolution

--- a/packages/config/package.json
+++ b/packages/config/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@nzila/config",
   "version": "0.1.0",
-  "private": true,
+  "private": true, "type": "module",
   "files": ["*.json", "eslint.js", "prettier.js"],
   "exports": {
     "./tsconfig/base": "./tsconfig.base.json",
