--- a/packages/scripts-book/package.json
+++ b/packages/scripts-book/package.json
@@ -2,7 +2,7 @@
   "name": "nzila-scripts-book-template",
   "version": "1.0.0",
   "description": "Nzila-wide Scripts Book Template Kit — standardizes governance, CI/CD, Azure Postgres, Azure Container Apps, Clerk auth, security, observability, and Bash+PowerShell parity across repos.",
-  "private": true,
+  "private": true, "type": "module",
   "packageManager": "pnpm@9.15.4",
   "scripts": {
     "sb:validate": "node generator/dist/index.js validate",
