--- a/apps/console/package.json
+++ b/apps/console/package.json
@@ -24,6 +24,7 @@
     "@nzila/qbo": "workspace:*",
     "@nzila/tax": "workspace:*",
     "@nzila/ui": "workspace:*",
+    "framer-motion": "^11.3.30",
     "@types/dompurify": "^3.2.0",
     "dompurify": "^3.3.1",
     "drizzle-orm": "^0.39.0",
