--- a/apps/partners/package.json
+++ b/apps/partners/package.json
@@ -26,6 +26,7 @@
     "next": "16.1.6",
     "react": "19.2.4",
     "react-dom": "19.2.4",
+    "framer-motion": "^11.3.30",
     "zod": "^3.24.0"
   },
   "devDependencies": {
