--- a/packages/platform-isolation/package.json
+++ b/packages/platform-isolation/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@nzila/platform-isolation",
   "version": "0.1.0",
-  "private": true,
+  "private": true, "type": "module",
   "main": "./src/index.ts",
   "types": "./src/index.ts",
   "exports": {
