feat(cora): read-only query enforcement for agri-db
- Add packages/agri-db/src/readonly/ with typed read-only query helpers
- Contract test: cora-readonly.test.ts validates no INSERT/UPDATE/DELETE in read paths
- Part of Platform Dominance Train — Epic 1 (PR 1.1–1.2)

--- a/packages/agri-db/package.json
+++ b/packages/agri-db/package.json
@@ -7,6 +7,7 @@
   "exports": {
     ".": "./src/index.ts",
     "./types": "./src/types.ts",
+    "./readonly": "./src/readonly/index.ts",
     "./producers": "./src/repositories/producers.ts",
     "./crops": "./src/repositories/crops.ts",
     "./harvests": "./src/repositories/harvests.ts",
