feat(abr): governance convergence — audit taxonomy, evidence packs, org isolation
- ABR auth_core: enforce orgId scoping on all views
- ABR org_offboarding_views: dispatcher-only pattern (no direct DB mutations)
- Add apps/abr/lib/evidence-packs.ts — structured evidence pack builder
- Add apps/abr/lib/integration-events.ts — typed domain event emitters
- Add packages/os-core/src/audit/ — canonical ABR audit taxonomy (abr.ts + index)
- Contract tests: abr-audit-taxonomy, abr-dispatcher-only, abr-evidence-packs, abr-org-isolation
- Part of Platform Dominance Train — Epic 2 (PR 2.1–2.4)

--- a/apps/abr/package.json
+++ b/apps/abr/package.json
@@ -16,6 +16,8 @@
     "@nzila/blob": "workspace:*",
     "@nzila/db": "workspace:*",
     "@nzila/os-core": "workspace:*",
+    "@nzila/integrations-core": "workspace:*",
+    "@nzila/integrations-runtime": "workspace:*",
     "@nzila/ui": "workspace:*",
     "@nzila/ai-sdk": "workspace:*",
     "@nzila/ml-sdk": "workspace:*",
