feat(console): operational envelope — system-health dashboard + SLA monitoring
- Console system-health page: outbox backlog + worker saturation widgets
- Console integrations/sla page: SLO compliance dashboard
- Add @nzila/platform-ops package: read-only operational metrics (outbox, queue depths)
- Contract test: console-integration-slo validates SLO thresholds
- Part of Platform Dominance Train — Epic 3 (PR 3.1–3.3)

--- a/apps/console/package.json
+++ b/apps/console/package.json
@@ -21,6 +21,9 @@
     "@nzila/payments-stripe": "workspace:*",
     "@nzila/platform-export": "workspace:*",
     "@nzila/platform-metrics": "workspace:*",
+    "@nzila/platform-ops": "workspace:*",
+    "@nzila/platform-performance": "workspace:*",
+    "@nzila/platform-proof": "workspace:*",
     "@nzila/qbo": "workspace:*",
     "@nzila/tax": "workspace:*",
     "@nzila/ui": "workspace:*",
