feat: defensibility finalization — ABR parity, NACP integrity, data lifecycle, SLO gating
Epic A – ABR Parity:
- Add ABR performance metrics bridge (performance.ts, performance-middleware.ts)
- Add ABR proof section with evidence stats (abr-proof.ts + tests)
- Fix GovernanceActionContext field mapping in evidence-packs.ts
- Fix SealablePackIndex artifacts type (string[] -> Array<{sha256,name}>)
- Fix SendRequest fields in integration-events.ts (recipientRef->to, payload->variables)
- Extend platform-export with ABR tables

Epic B – NACP Integrity:
- Add NACP terminal event evidence packs with hash chain
- Add NACP integrity proof section (nacp-proof.ts + tests)
- Add Console NACP integrity verification page
- Fix console orgs route (entities->orgs, entityMembers->orgMembers)

Epic C – Data Lifecycle:
- Create @nzila/data-lifecycle package with manifests for all 13 apps
- Define retention schedules, deletion policies, residency, backup posture
- Add data-lifecycle proof section (data-lifecycle-proof.ts)
- Wire into vitest workspace config

Epic D – SLO Gating:
- Add ops/slo-policy.yml with per-app thresholds (latency, errors, integrations, DLQ)
- Add scripts/slo-gate.ts CI gate (exit 0 pass / exit 1 block)

Contract Tests (22 assertions):
- ABR_OPS_ENVELOPE_REQUIRED_001 (5 tests)
- NACP_EVIDENCE_REQUIRED_FOR_TERMINAL_STATES_002 (5 tests)
- DATA_LIFECYCLE_MANIFEST_REQUIRED_003 (6 tests)
- SLO_POLICY_PRESENT_AND_VALID_004 (6 tests)

Infrastructure:
- Add vitest.config.ts for platform-ops and org packages
- Add --passWithNoTests to 43 package test scripts
- Fix nacp-proof entityId->subjectId for org-semantic-convergence compliance

--- a/apps/abr/package.json
+++ b/apps/abr/package.json
@@ -16,6 +16,7 @@
     "@nzila/blob": "workspace:*",
     "@nzila/db": "workspace:*",
     "@nzila/os-core": "workspace:*",
+    "@nzila/platform-performance": "workspace:*",
     "@nzila/integrations-core": "workspace:*",
     "@nzila/integrations-runtime": "workspace:*",
     "@nzila/ui": "workspace:*",
