--- a/apps/trade/package.json
+++ b/apps/trade/package.json
@@ -8,7 +8,7 @@
     "start": "next start",
     "lint": "eslint",
     "typecheck": "tsc --noEmit",
-    "test": "vitest run",
+    "test": "vitest run --passWithNoTests",
     "clean": "rm -rf .next .turbo node_modules"
   },
   "dependencies": {
