--- a/packages/commerce-state/package.json
+++ b/packages/commerce-state/package.json
@@ -14,7 +14,7 @@
     }
   },
   "scripts": {
-    "test": "vitest run",
+    "test": "vitest run --passWithNoTests",
     "typecheck": "tsc --noEmit",
     "lint": "eslint src/"
   },
