--- a/packages/pricing-engine/package.json
+++ b/packages/pricing-engine/package.json
@@ -10,7 +10,7 @@
     }
   },
   "scripts": {
-    "test": "vitest run",
+    "test": "vitest run --passWithNoTests",
     "typecheck": "tsc --noEmit",
     "lint": "eslint src/"
   },
