feat: defensibility finalization — real ports, real gating, governance bridge
Epic 1 — NACP Integrity (real ports, no stubs):
- platform-proof/src/ports/nacp.ts: DB-backed NacpIntegrityProofPorts
  (fetchSealStatuses, fetchAnomalies, fetchExportProofHash, fetchHashChainInfo)
  queries auditEvents + evidencePacks via Drizzle ORM, org-scoped
- Console nacp-integrity page wires nacpIntegrityPorts (no stubs)
- Contract test NACP_INTEGRITY_NO_STUBS_001: forbids stub ports

Epic 2 — SLO Gate (real metrics-based deploy blocking):
- scripts/slo-gate.ts: queries platform-performance + platform-ops
  for enforced envs (pilot/prod), simulated fallback for dev only
- Contract test SLO_GATE_REAL_METRICS_002: enforces real store imports

Epic 3 — ABR Governance Bridge (polyglot authority):
- compliance/governance_bridge.py: single entry point for ABR Django
  backend governance (emit_audit, seal_evidence, dispatch_notification)
  with org validation, ABR taxonomy enforcement, hash-chained audit
- Contract test ABR_GOVERNANCE_BRIDGE_001..005: bridge exists,
  org-scoping, taxonomy, view enforcement, dispatcher routing
- Legacy auto-generated views tracked in allowlist for migration

All gates green: lint 55/55, test 68/68, contract 5004/5004, build 15/15

--- a/packages/platform-proof/package.json
+++ b/packages/platform-proof/package.json
@@ -9,7 +9,8 @@
     "./integrations": "./src/integrations-proof.ts",
     "./abr": "./src/abr-proof.ts",
     "./nacp": "./src/nacp-proof.ts",
-    "./data-lifecycle": "./src/data-lifecycle-proof.ts"
+    "./data-lifecycle": "./src/data-lifecycle-proof.ts",
+    "./ports/nacp": "./src/ports/nacp.ts"
   },
   "scripts": {
     "typecheck": "tsc --noEmit",
