--- a/package.json
+++ b/package.json
@@ -43,6 +43,8 @@
   },
   "devDependencies": {
     "@changesets/cli": "^2.27.0",
+    "@nzila/platform-ops": "workspace:*",
+    "@nzila/platform-performance": "workspace:*",
     "@tailwindcss/oxide": "^4.2.0",
     "lefthook": "^2.1.1",
     "prettier": "^3.4.2",
@@ -50,7 +52,8 @@
     "tsx": "^4.19.3",
     "turbo": "^2.8.10",
     "typescript": "^5",
-    "vitest": "^4.0.18"
+    "vitest": "^4.0.18",
+    "yaml": "^2.7.0"
   },
   "pnpm": {
     "overrides": {
